-Add support for html style escaped unicode in txt import, to allow import
 of Supermemo databases containing unicode (requested by Patrick Kenny).
-Support import of Supermemo for Palm databases that were converted to XML
 by smconv.pl from http://smconvpl.sourceforge.net (code by Felix Engel).
-Make import of tab delimited files more robust (reported by nairbv).
-On Windows, log errors to a file in the user's directory, as opposed to a
 file in a system directory (requested by nairbv).
-Visually distinguish grades 0 and 1 from other grades (based on input
 from Juan Alonso and Mike Charlton.)
-Czech translation by Jiri Popelka and Petr Tomica.
-Chinese translation by Leon Goo.
	

MNEMOSYNE 1.0 : 2007-12-27

(Note that for Windows users we recommend uninstalling the previous 
version before doing an upgrade.)

-Mnemosyne can now be run from a USB drive. Copy the Mnemosyne directory
 from C:\Program Files to your USB drive, and then copy the .mnemosyne 
 directory from inside your home directory to inside the Mnemosyne directory
 on the USB drive. Alternatively, you can start mnemosyne with the -d option
 to specify where .mnemosyne directory is located, e.g. 
   F:\Mnemosyne\mnemosyne.exe -d F:\.mnemosyne
	
 To run the Linux version from a USB key, untar the source file
 mnemosyne-X.X.tgz (with X.X the version number) to the USB key. Copy your 
 .mnemosyne directory to the USB key as well. Change to the directory where 
 the USB key is mounted and type

 PYTHONPATH=mnemosyne-X.X python mnemosyne-X.X/mnemosyne/pyqt_ui/mnemosyne -d .

 (This assumes that the system you are working on has Python installed, as 
 well as all the libraries Mnemosyne requires.)
-new logo, thanks to a contributor whose name sadly got lost in the 
 demise of the open-collab site.
-new icons, based on the Crystal iconset.
-added tip of the day wizard.
-implemented a basic plugin system. The directory .mnemosyne/plugins
 can contain Python scripts which will be executed at run time and